[workspace]
members = [
    "crates/chin-sql",
    "crates/chin-sql/chin-sql-inner",
    "crates/chin-sql/chin-sql-derive",
    "crates/chin-tools-types",
    "crates/chin-tools",
    "crates/chin-wayland-utils",
    "crates/chin-terminal-utils",
    "crates/actor-sqlite", "chin-enums",
]
resolver = "3"

[workspace.dependencies]
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
# fix unable to find sqlite for aarch64 build
# https://github.com/tauri-apps/tauri/issues/6405#issuecomment-1909141436
rusqlite = { version = "0.35.0", features = ["bundled"] }
